--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
- MONGO_URI =mongodb+srv://raouaath:<password>@cluster0.rlyru.mongodb.net/test
+ MONGO_URI =mongodb+srv://raouaath:72443838@cluster0.rlyru.mongodb.net/test
 
  localhost:27017
